[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Lukas Sekoulidis <lukas.sekoulidis@syna.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
datasets = "^2.19.2"
transformers = "^4.41.2"
torch = "^2.3.1"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
